2009-10-16  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Use a weak pointer to the clicked tile when launching an app, avoid crashes
	if the tile is destroyed.
	Fixes: NB#141757

	* src/launcher/hd-launcher.c:

2009-10-16  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.106-1

2009-10-16  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-render-manager.c (hd_render_manager_set_input_viewport):
	Disable status menu portrait mode.

2009-10-16  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-wm.c (hd_wm_current_app_is): Update _MB_CURRENT_APP_WINDOW
	on the application window as well. Related to NB#140339 - Unnecessary
	wake-ups in application due to XAtoms. Original patch from Alban Crequy.

	Release 2.2.105-1

2009-10-15  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-desktop.c (hd_desktop_init): Give input focus to the newly
	mapped desktop window because in the startup case we don't do it.

2009-10-15  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#142941 - Snap to grid for Home applets/shortcuts

	* data/transitions.ini: Add snap to grid key/values.

	* src/home/hd-home-view.c (snap_coordinate_to_grid,
	snap_widget_to_grid): Add snap to grid support.

	* debian/changelog: update

2009-10-15  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#137452 - Remove nice task launcher animation
	
	* src/launcher/hd-launcher-page.c
	* src/launcher/hd-launcher-page.h
	* src/launcher/hd-launcher-grid.c
	* src/launcher/hd-launcher-grid.h: Move transition_depth from function
	  call into the grid's private data. Also load the 'sequenced' flag,
	  and disable the nice sequencing of the task launcher animation if it
	  is not set.
	* data/transitions.ini: Set sequenced to 0 for the two launcher 
	  transitions, and speed them up to the same amount as everything else.

2009-10-15  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Fixes: NB#140246 - Input method support to desktop
