@@ -1,6 +1,8 @@
 hildon-desktop (1:2.2.107-1~unreleased) unstable; urgency=low
 
-  * foo
+  Kimmo:
+  * Fixes: NB#140086 - Backup needs to clear the .cache/launch directory
+    before it reboots after restore
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 16 Oct 2009 12:56:22 +0300
 
